# recurio

./: .env  Cargo.toml  README.md  docker-compose.yml
configuration/: base.yml  local.yml
migrations/: 20230827072930_create_services_table.sql  20230828205137_create_users_table.sql
src/: README.md  auth.rs  configuration.rs  lib.rs  main.rs  session_store.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  service.rs  subscription.rs  user.rs
src/routes/: auth.rs  mod.rs  services.rs
