[package]
name = "recurio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tracing", "macros"] }
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
hyper = { version = "0.14.27", features = ["full"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "any", "postgres", "chrono", "uuid"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[dev-dependencies]
claims = "0.7.1"
fake = "2.8.0"
